# Document_Processing

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py  main.py
app/routers/: chat.py  documents.py
data/: helper.py  processed_doc_docling.json
experiments/: ocr_agent.ipynb  prompts.py  tesseract_ocr.ipynb
src/: main.py
work-items/: 1.1-ocr-agent-evaluator.md  1.2-docling-deep-dive.md  1.3-pdf-handling-strategies.md  2.1-chunking-strategies.md  README.md  app-plans.md  docling-models-exploration.md  langfuse-setup.md  model-serving-exploration.md
